# zdebootstrap

./: .gitignore  822.cc  822.h  CMakeLists.txt  Makefile  apt.cc  apt.h  deb.cc  deb.h  deb_ar.cc  deb_ar.h  deb_comp.cc  deb_comp.h  deb_control.cc  deb_control.h  deb_data.cc  deb_data.h  globals.cc  nproc.cc  nproc.h  paths.cc  paths.h  status.cc  status.h  tqueue.cc  tqueue.h  util.cc  util.h  zdebootstrap.cc  zdebootstrap.h  zunpack.cc
debian/: changelog  control  copyright
tests/: .gitignore  CMakeLists.txt  cat-re822  mk-deb  noar.cc  re822.cc  runtests  tq.cc  unp_deb
tests/822/: 4095.in  4095.out  4096.in  4096.out  basic.in  basic.out  key-section.in  key-section.out  no-colon.err  nonl-oneline.in  nonl-oneline.out
tests/bad_debs/: control_bz2.deb  control_bz2.err  data_zst.deb  debian-binary_1.0.deb  debian-binary_1.0.err  directory.err  empty_ar.err  empty_control_gzip.deb  empty_control_gzip.err  empty_file.err  only_control.deb  only_control.err  only_debian_binary.deb  only_debian_binary.err
tests/compress/: 0.939-cgz-dgz.in  0.939-cnone-dnone.in  0.939-cxz-dxz.in  0.939-czst-dzst.in  2.0-cgz-dbz2.in  2.0-cgz-dlzma.in  2.0-cgz-dxz.in  2.0-cgz-dxz.out  2.0-cnone-dnone.in  2.0-cxz-dgz.in  2.0-czst-dzst.in
tests/deb-data/usr/share/doc/dupa/: README  🍺
tests/extract/: basic.in  cross-dir-hardlink.in  cross-dir-symlink.in  cross-dir-symlink.out  dangling-symlink.in  dangling-symlink.out  same-dir-hardlink.in  same-dir-symlink.in  unicode.in  unicode.out
tests/harness/: strcmp
tests/tqueue/: line.in  req.in  three.in  triangle.in  twodep.in  twodep.out  unmet.in
